[gd_scene load_steps=2 format=3 uid="uid://cn5v270vtn1pl"]

[ext_resource type="Script" uid="uid://cilbj74x1typ6" path="res://ui/menus/game_over_screen.gd" id="1_iwahs"]

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_iwahs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -141.0
offset_right = 92.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="GameOverLabel" type="Label" parent="Control/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Control/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Control/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "High Score: 0"

[node name="RestartButton" type="Button" parent="Control/CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Restart"

[node name="MenuButton" type="Button" parent="Control/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "Quit"
